--- a/main.css
+++ b/main.css
@@ -9,7 +9,22 @@ hr {
     padding: 0;
 }
 
+h1 {
+    color: #6BE7F4;
+}
+
 h4 {
     margin-bottom: 0;
 }
 
+
+span {
+    color: green;
+    font-size: 18px;
+}
+
+button {
+    background: #6BE7F4;
+    color: white;
+    
+}
